--- a/LookingForGroup/src/main/res/values/strings.xml
+++ b/LookingForGroup/src/main/res/values/strings.xml
@@ -99,4 +99,5 @@
     <string name="delete">delete</string>
     <string name="revoke_application_question">Do you want to revoke your application?</string>
     <string name="what_would_you_like_to_do_appplication">What would you like to do with your application?</string>
+    <string name="finish">Finish</string>
 </resources>
