--- a/LookingForGroup/src/main/res/values/strings.xml
+++ b/LookingForGroup/src/main/res/values/strings.xml
@@ -100,4 +100,5 @@
     <string name="revoke_application_question">Do you want to revoke your application?</string>
     <string name="what_would_you_like_to_do_appplication">What would you like to do with your application?</string>
     <string name="finish">Finish</string>
+    <string name="summoner_name_placeholder">summoner name</string>
 </resources>
